--- a/src/less/base-default.less
+++ b/src/less/base-default.less
@@ -37,7 +37,7 @@ body {
 	color: #dbdbdb;
 	font-weight: 400;
 	font-size: 1em;
-	font-family: "PT Serif", "Helvetica Neue", Helvetica, sans-serif;
+	font-family: "Josefin Sans", "Helvetica Neue", Helvetica, sans-serif;
 	overflow-x: hidden;
 	transition:background 0.5s;
 	.main-transition();
