--- a/src/less/mediaQ.less
+++ b/src/less/mediaQ.less
@@ -4,18 +4,22 @@
 	#grid.item-grid{
 		min-width: 550px!important;
 		max-width: 550px!important;
+		padding-bottom: 0!important;
+		padding-top:50px;
 		.item{
 			max-width: 225px!important;
 			max-height: 180px!important;
 			.main-transition();
 			figure{
+				height: 155px;
 				min-height: 150px;
-				line-height: 150px;
+				line-height: 145px;
 				max-width: 125px;
-				transition:max-width .4s;
+				transition: max-width 0.4s;
+				transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+				height: 150px;
 				.main-transition();
 				.item-image{
-					//height: 150px;
 				}
 				
 			}
@@ -95,7 +99,8 @@
 	}
 	#grid.item-grid.open.scroll{	
 		padding:20px!important;
-		padding-top:50px!important;
+		padding-top:100px!important;
+		padding-bottom:100px!important
 	}
 	#grid.scroll{
 		direction: rtl;
