--- a/src/less/section.less
+++ b/src/less/section.less
@@ -36,7 +36,7 @@
   		flex:1 0 50%;
   		transition: max-height 0.4s, max-width .4s;
   		.main-transition();
-		a{
+		figure{
 			max-width: 100px;
 			margin:auto;    
 			min-height: 120px;		
@@ -44,10 +44,8 @@
 			transition:max-width .4s;
 			.main-transition();
 			.item-image{
-				max-width: 100px;
-				max-height: 120px;
-				z-index: 10;				
-				max-width: inherit;
+				width: 100%;
+				height: auto;
 				vertical-align: middle;
 			}
 			.item-image.centered{
