--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,15 +1,426 @@
+@import url(http://fonts.googleapis.com/css?family=Playfair+Display:900|Josefin+Sans:400);
+@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
 /*LESS STYLES*/
-/*LESS Navbar*/
-.navbar {
-  height: 200px;
+/*LESS Article*/
+.article {
+  padding: 20px;
+  flex-grow: 9;
+  height: 100%;
+  max-width: 768px;
+  margin: auto;
   width: 100%;
-  display: block;
 }
-.navbar .navbar-brand-buttom {
-  padding-left: 20px;
-  padding-right: 20px;
+.article #long {
+  display: flex;
 }
-.navbar .navbar-brand-buttom .navbar-brand {
+.article .article-cont {
+  background: rgba(164, 195, 217, 0.1);
+  padding: 20px 5px 20px 5px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.article .article-cont h2 {
+  color: #2f3c45;
+  margin-top: 0;
+  margin-bottom: 0px;
+  text-align: center;
+  font-size: 2.2em;
+  font-weight: 900;
+}
+.article .article-cont p {
+  text-align: justify;
+  font-size: 1.3em;
+  color: #2f3c45;
+}
+/*Less Banner*/
+#square {
+  padding: 20px 0 20px 0;
+}
+#long {
+  position: relative;
+}
+/*LESS Base-Default*/
+*,
+*:after,
+*:before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: '';
+}
+.clearfix:after {
+  clear: both;
+}
+html,
+body {
+  height: 100%;
+}
+#grid.scroll {
+  overflow-y: scroll;
+}
+.noscroll {
+  overflow-y: hidden;
+}
+#grid.item-grid.opacity {
+  opacity: .7;
+  transition: opacity .5s;
+  transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+}
+body.opacity {
+  background: rgba(0, 0, 10, 0.5) !important;
+}
+body {
+  height: auto;
+  min-height: 100%;
+  background: #b2d1e5;
+  color: #dbdbdb;
+  font-weight: 400;
+  font-size: 1em;
+  font-family: "PT Serif", "Helvetica Neue", Helvetica, sans-serif;
+  overflow-x: hidden;
+  transition: background 0.5s;
+  transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+}
+h2 {
+  font-size: 1em;
+}
+a {
+  color: #2f3c45;
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+a:hover,
+a:focus {
+  outline: none;
+  color: #fff ;
+}
+/*LESS Footer*/
+footer .footer {
+  height: 100px;
+}
+footer .footer p {
+  text-align: center;
+  line-height: 100px;
+}
+/*LESS Navbar*/
+.navbar.navbar-fixed {
+  position: fixed;
+}
+.navbar {
+  height: 75px;
+  width: 100%;
+  display: flex;
+  border-bottom: 1px solid #263440;
+  z-index: 100;
+}
+.navbar .navbar-brand {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.navbar .navbar-brand .brand-name {
+  margin-left: 50px;
+  line-height: 75px;
   font-size: 2em;
   font-weight: 700;
+  color: #f1eeee;
+  transition: opacity 0.3s;
+}
+.navbar .navbar-brand .brand-name span {
+  color: #263440;
+  opacity: .7;
+}
+.navbar .navbar-brand .brand-name:hover {
+  opacity: .8;
+  transition: opacity 0.3s;
+}
+.navbar .navbar-brand .menu-button.open {
+  left: initial;
+  right: 20px;
+  transition: left 0.6s;
+  height: 40px;
+  width: 40px;
+  transition: height .4s,width .4s;
+}
+.navbar .navbar-brand .menu-button.open .trigger_open {
+  opacity: 0;
+}
+.navbar .navbar-brand .menu-button.open .trigger_close {
+  opacity: 1;
+}
+.navbar .navbar-brand button {
+  position: fixed;
+  overflow: hidden;
+  padding: 0px;
+  left: 20px;
+  width: 50px;
+  z-index: 100;
+  height: 50px;
+  outline: none;
+  border: none;
+  flex: none;
+  margin: auto;
+  background: none;
+  transition: top .6s,left 0.6s;
+  transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+  top: 25px;
+}
+.navbar .navbar-brand button svg .trigger_open {
+  opacity: 1;
+}
+.navbar .navbar-brand button svg .trigger_close {
+  opacity: 0;
+}
+.navbar .navbar-brand button svg .trigger_open,
+.navbar .navbar-brand button svg .trigger_close {
+  padding: 2px;
+}
+.navbar .navbar-brand button svg .trigger_open line,
+.navbar .navbar-brand button svg .trigger_close line {
+  stroke: white;
+  fill: none;
+  stroke-width: 2.5;
+}
+.navbar .navbar-brand button svg g {
+  transition: opacity .3s,transform .3s;
+  transform-origin: 50% 50%;
+}
+.navbar .navbar-collapse {
+  display: none;
+}
+.navbar .navbar-collapse #nav-items {
+  padding: 0 50px 0;
+  position: absolute;
+  display: flex;
+  right: 0;
+  line-height: 45px;
+}
+.navbar .navbar-collapse #nav-items li {
+  padding: 0 30px;
+}
+.navbar .navbar-collapse #nav-items li a {
+  transition: color .3s;
+  font-size: 1.2em;
+  color: #f1eeee;
+}
+.navbar .navbar-collapse #nav-items li a:hover {
+  color: #263440;
+  transition: color .3s;
+}
+/*LESS MEDIA QUERIES*/
+/* Media Queries */
+@media screen and (min-width: 1240px) {
+  #grid.item-grid {
+    min-width: 550px!important;
+    max-width: 550px!important;
+  }
+  #grid.item-grid .item {
+    max-width: 225px!important;
+    max-height: 180px!important;
+    transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+  }
+  #grid.item-grid .item figure {
+    min-height: 150px;
+    line-height: 150px;
+    max-width: 125px;
+    transition: max-width 0.4s;
+    transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+  }
+}
+@media screen and (min-width: 1100px) {
+  .article #long {
+    display: block;
+  }
+  body.opacity {
+    background: #b2d1e5 !important;
+    transition: background 0.5s;
+    transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+  }
+  body.noscroll {
+    overflow-y: auto!important;
+  }
+  .container {
+    flex-direction: row!important;
+  }
+  #open-button {
+    display: none;
+  }
+  .navbar-collapse {
+    display: block;
+  }
+  #grid {
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 0!important;
+    transform: none!important;
+    transition: transform .5s!important;
+  }
+  .item-grid {
+    display: flex!important;
+    position: relative!important;
+    margin-left: 0!important;
+    background: #b2d1e5 !important;
+    overflow-y: hidden!important;
+  }
+  .item-grid .item {
+    border: 3px solid #b2d1e5 !important;
+  }
+  .item-grid .item-overlay {
+    opacity: 0.7;
+    background-color: #263440 !important;
+    z-index: 9;
+  }
+  .item-grid .item-overlay:hover {
+    background-color: rgba(164, 195, 217, 0.1) !important;
+    transition: background-color 0.3s;
+  }
+}
+@media screen and (min-width: 850px) {
+  .navbar-collapse {
+    display: block!important;
+  }
+}
+@media screen and (min-width: 600px) {
+  .article .article-cont {
+    padding: 20px 50px 20px 50px;
+  }
+  .article .article-cont h2 {
+    font-size: 5em;
+  }
+  #grid.item-grid {
+    max-width: 370px;
+    padding: 20px!important;
+    padding-top: 50px!important;
+  }
+  #grid.item-grid.open.scroll {
+    padding: 20px!important;
+    padding-top: 50px!important;
+  }
+  #grid.scroll {
+    direction: rtl;
+    left: -20px;
+  }
+  .item-grid {
+    margin-left: -370px !important;
+  }
+  .item-grid.open {
+    transform: translate(370px) !important;
+    transition: transform .5s!important;
+  }
+  .menu-button.open {
+    right: initial!important;
+    left: 295px!important;
+  }
+}
+@media screen and (min-width: 550px) {
+  #grid.item-grid.open {
+    padding-left: 120px!important;
+    padding-right: 120px!important;
+  }
+}
+@media screen and (min-width: 400px) {
+  .item-grid {
+    padding-left: 90px!important;
+    padding-right: 90px!important;
+  }
+  #open-button.open {
+    height: 50px;
+    width: 50px;
+    transition: height .4s,width .4s,left 0.5s;
+    transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+  }
+}
+@media screen and (min-width: 400px) {
+  .item-grid {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+}
+@media screen and (min-width: 350px) {
+  .brand-name {
+    display: block!important;
+  }
+}
+/*LESS Mixins*/
+/*LESS Section*/
+.item-grid.open {
+  transform: translate(100vw);
+  transition: transform .5s;
+  transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98) !important;
+  display: flex;
+}
+.item-grid {
+  position: fixed;
+  margin-left: -100vw;
+  top: 0;
+  flex-wrap: wrap;
+  padding: 20px;
+  padding-top: 75px;
+  max-width: 100vw;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  background: #263440;
+  transition: transform .5s;
+  transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+}
+.item-grid .item-overlay {
+  opacity: 0.7;
+  background-color: #b2d1e5;
+  z-index: 9;
+}
+.item-grid .item-overlay:hover {
+  background-color: #263440;
+  transition: background-color 0.3s;
+}
+.item-grid .item {
+  max-height: 120px;
+  max-width: 120px;
+  border: 3px solid #263440;
+  border-width: 0 3px 6px;
+  flex: 1 0 50%;
+  transition: max-height 0.4s, max-width 0.4s;
+  transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+}
+.item-grid .item figure {
+  max-width: 100px;
+  margin: auto;
+  min-height: 120px;
+  line-height: 110px;
+  transition: max-width 0.4s;
+  transition-timing-function: cubic-bezier(0.16, 0.94, 0.44, 0.98);
+}
+.item-grid .item figure .item-image {
+  max-width: 100px;
+  max-height: 120px;
+  z-index: 10;
+  max-width: inherit;
+  vertical-align: middle;
+}
+.item-grid .item figure .item-image.centered {
+  height: auto;
+}
+.item-grid .item figure figcaption {
+  display: none;
+}
+.item-grid .item p {
+  display: none;
+}
+/*LESS Variables*/
+/*Text*/
+/*LESS Wrapper*/
+.wrapper {
+  position: absolute;
+  min-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+.container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
