--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,5 +1,5 @@
 /*LESS Variables*/
-@primary-color:#B2D1E5;//#83b5dd68a4c4
+@primary-color:#68a4c4;//#68a4c4
 @primary-color-dark:#263440;
 @primary-color-ligth:#97d1ff;
 @article:rgba(164, 195, 217, 0.1);//#6FB7E9;//rgba(100, 161, 194, 0.55);//#7EAED4;
@@ -7,5 +7,5 @@
 @item-grid-max-width:100vw;
 @border-item:@primary-color;
 /*Text*/
-@primary-color-text:rgb(47, 60, 69);//#dbdbdb;
+@primary-color-text:#dbdbdb;
 @primary-color-text-light:#F1EEEE;
